--- a/packages/domains-table/src/domains-table/style.scss
+++ b/packages/domains-table/src/domains-table/style.scss
@@ -25,7 +25,7 @@
 	border-collapse: collapse;
 
 	@media ( max-width: 480px ) {
-		padding: 16px;
+		padding: 13px;
 	}
 
 	table {
@@ -181,9 +181,9 @@
 }
 
 .domains-table-mobile-cards {
-	height: 100%;
-	overflow-x: visible;
+	height: calc(100vh - 280px);
 	overflow-y: auto;
+	padding: 3px;
 
 	.domains-table-mobile-cards-select-all {
 		display: flex;
